description changed to lower case

--- a/index.html
+++ b/index.html
@@ -244,30 +244,29 @@
 		<div class="modal-dialog" role="document">
 		  <div class="modal-content">
 			<div class="modal-header">
-			  <h5 class="modal-title" id="exampleModalLabel">GUIDELINES FOR ATTENDING HOLY MASS ONLINE</h5>
+			  <h5 class="modal-title" id="exampleModalLabel">Guidelines for attending holy mass online</h5>
 			  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 				<span aria-hidden="true">&times;</span>
 			  </button>
 			</div>
 			<div class="modal-body">
 
-				Start preparing for HOLY MASS before-hand.
-				Do not rush !!!
+				✝ Start preparing for holy mass before-hand. do not rush .
 				
 				<br/>
-				✝ Set-up a SIMPLE ALTAR with a CRUCIFIX & a CANDLE in your table near the device (mobile phone, tablet, laptop, TV) streaming the HOLY MASS.
+				✝ Set-up a simple altar with a crucifix & a candle in your table near the device (mobile phone, tablet, laptop, tv) streaming the holy mass.
 				<br/>
-				✝ Wear APPROPRIATE ATTIRE
-				(Do not attend the mass in your leisure wear or home wear). Be serious in your preparation.
+				✝ Wear appropriate attire
+				(do not attend the mass in your leisure wear or home wear). be serious in your preparation.
 				<br/>
-				✝ TURN OFF other online devices &  DO NOT DO ANYTHING ELSE while you are participating in the HOLY MASS. There should be nothing to distract your attention on the mass.
+				✝ Turn off other online devices &  do not do anything else while you are participating in the holy mass. there should be nothing to distract your attention on the mass.
 				<br/>
-				✝ RECITE the corresponding RESPONSES to the prayers in the HOLY MASS. 
+				✝ Recite the corresponding responses to the prayers in the holy mass. 
 				<br/>
-				✝	Observe the PROPER GESTURES of standing, kneeling & sitting at appropriate times in the HOLY MASS.
+				✝	Observe the proper gestures of standing, kneeling & sitting at appropriate times in the holy mass.
 				<br/>
-				✝	During the time of receiving communion, please RECITE the SPIRITUAL COMMUNION PRAYER.
-				<br/>Download prayer here : <a href="english.jpeg" download="english.jpeg" target="_blank">English</a> &nbsp; <a download="malayalam.jpeg" href="malayalam.jpeg">Malayalam</a>
+				✝	During the time of receiving communion, please recite the spiritual communion prayer.
+				<br/><br/>Download prayer here : <a href="english.jpeg" download="english.jpeg" target="_blank">English</a> &nbsp; <a download="malayalam.jpeg" href="malayalam.jpeg">Malayalam</a>
 			
 			</div>
 			<div class="modal-footer">
