--- a/index.html
+++ b/index.html
@@ -52,6 +52,46 @@
 		</div>
 	</nav>
 
+<div class="container">
+			<div id="carouselContent" class="carousel slide" data-ride="carousel">
+				<div class="carousel-inner" role="listbox">
+					<div class="carousel-item active text-center p-4">
+						<p>
+							<h4 style="color:red;">The live stream of today's <b>Papal Address</b> and <b>urbi et orbi
+							Apostolic Blessing</b>, at
+							<br> 
+							<b>10.30pm IST today</b>  </h4>
+							 <br>
+							 <br>
+							<a href="https://www.shalomworld.org/live"
+							class="btn btn-warning goButton text-white font-weight-bold">Watch on Shalom World</a>
+						</p>
+					</div>
+					<div class="carousel-item text-center p-4">
+
+						<p>
+							<h4 style="color:red;">The live stream of today's <b>Papal Address</b> and <b>urbi et orbi
+							Apostolic Blessing</b>, at
+							<br> 
+							<b>10.30pm IST today</b>  </h4>
+							 <br>
+							 <br>
+							<a href="https://www.youtube.com/watch?v=VJHI8bI0LWg"
+							class="btn btn-warning goButton text-white font-weight-bold">Watch on Youtube</a>
+						</p>
+					</div>
+				</div>
+				<a class="carousel-control-prev" href="#carouselContent"
+					role="button" data-slide="prev"> <span
+					class="carousel-control-prev-icon" aria-hidden="true"></span> <span
+					class="sr-only" style="color:red;">Previous</span>
+				</a> <a class="carousel-control-next" href="#carouselContent"
+					role="button" data-slide="next"> <span
+					class="carousel-control-next-icon" aria-hidden="true"></span> <span
+					class="sr-only" style="color:red;">Next</span>
+				</a>
+			</div>
+		</div>
 
 	<!-- Page Content -->
 	<div class="container">
@@ -77,47 +117,7 @@
 			</div>
 
 		</header>
-		<div class="container">
-			<div id="carouselContent" class="carousel slide" data-ride="carousel">
-				<div class="carousel-inner" role="listbox">
-					<div class="carousel-item active text-center p-4">
-						<p>
-							<h4 style="color:red;">The live stream of today's <b>Papal Address</b> and <b>urbi et orbi
-							Apostolic Blessing</b>, at
-							<br> 
-							<b>10.30pm IST today</b>  </h4>
-							 <br>
-							 <br>
-							<a href="https://www.shalomworld.org/live"
-							class="btn btn-warning goButton text-white font-weight-bold">Watch here online</a>
-						</p>
-					</div>
-					<div class="carousel-item text-center p-4">
-
-						<p>
-							<h4 style="color:red;">The live stream of today's <b>Papal Address</b> and <b>urbi et orbi
-							Apostolic Blessing</b>, at
-							<br> 
-							<b>10.30pm IST today</b>  </h4>
-							 <br>
-							 <br>
-							<a href="https://www.shalomworld.org/live"
-							class="btn btn-warning goButton text-white font-weight-bold">Watch here online</a>
-						</p>
-					</div>
-				</div>
-				<a class="carousel-control-prev" href="#carouselContent"
-					role="button" data-slide="prev"> <span
-					class="carousel-control-prev-icon" aria-hidden="true"></span> <span
-					class="sr-only" style="color:red;">Previous</span>
-				</a> <a class="carousel-control-next" href="#carouselContent"
-					role="button" data-slide="next"> <span
-					class="carousel-control-next-icon" aria-hidden="true"></span> <span
-					class="sr-only" style="color:red;">Next</span>
-				</a>
-			</div>
-		</div>
-		<!-- Page Features -->
+				<!-- Page Features -->
 		<div class="row text-center">
 
 			<div class="col-lg-3 col-md-6 mb-4">
