--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h3 class="text-center text-capitalize font-weight-bold text-danger">Malayalam Holy Mass</h3>
             <p>All timings are in IST (GMT+5.30).
               <span class="instructions badge badge-info badge-pill my-1" onclick="openModal()"><i
-                  class="fa fa-book pr-1"></i>Instructions</span>
+                  class="fa fa-book pr-1"></i>Guidelines</span>
             </p>
             <ul #id="daySelection" class="nav nav-tabs nav-fill" role="tablist">
               <li class="nav-item lej-padding">
@@ -2156,13 +2156,13 @@
   </footer><!-- #footer -->
 
   <!-- modal for online mass  -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  <div class="modal fade" id="guidelinesModal" tabindex="-1" role="dialog" aria-labelledby="guidelinesModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title text-danger font-weight-bold" id="exampleModalLabel">Guidelines for
-            attending holy mass online</h5>
+          <h5 class="modal-title text-danger font-weight-bold" id="guidelinesModalLabel">Guidelines for
+            attending Holy Mass online</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -2233,11 +2233,11 @@
     gtag('config', 'UA-161546265-1');
 
     $(window).on('load', function () {
-      $('#exampleModal').modal('show');
+      $('#guidelinesModal').modal('show');
     });
 
     function openModal() {
-      $('#exampleModal').modal('show');
+      $('#guidelinesModal').modal('show');
     }
 
     str = window.location.href.substring(0, window.location.href.length - 1) + '';
