--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>Catholic Stream Live</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="catholic streams live" name="keywords">
+  <meta content="live ctholic streams" name="description">
 
   <!-- Favicons -->
   <link href="img/favicon.ico" rel="icon">
@@ -91,35 +91,26 @@
 
         <ul #id="daySelection" class="nav nav-tabs nav-fill" role="tablist">
           <li class="nav-item lej-padding">
-
-            <a class="nav-link" href="#mon" role="tab" data-toggle="tab">Monday</a>
+            <a id="mon-link" class="nav-link" href="#mon" role="tab" data-toggle="tab">Monday</a>
           </li>
           <li class="nav-item lej-padding">
-            <a class="nav-link active show" href="#tue" role="tab" data-toggle="tab"
-              aria-selected="true">Tuesday</a>
-
+            <a id="tue-link" class="nav-link" href="#tue" role="tab" data-toggle="tab">Tuesday</a>
+          </li>
+          <li id="wed-link" class="nav-item lej-padding">
+            <a id="wed-link" class="nav-link" href="#wed" role="tab" data-toggle="tab">Wednesday</a>
           </li>
           <li class="nav-item lej-padding">
-
-            <a class="nav-link" href="#wed" role="tab" data-toggle="tab">Wednesday</a>
+            <a id="thu-link" class="nav-link" href="#thu" role="tab" data-toggle="tab">Thursday</a>
           </li>
           <li class="nav-item lej-padding">
-
-            <a class="nav-link" href="#thu" role="tab" data-toggle="tab">Thursday</a>
+            <a id="fri-link" class="nav-link" href="#fri" role="tab" data-toggle="tab">Friday</a>
           </li>
           <li class="nav-item lej-padding">
-
-            <a class="nav-link" href="#fri" role="tab" data-toggle="tab">Friday</a>
+            <a id="sat-link" class="nav-link" href="#sat" role="tab" data-toggle="tab">Saturday</a>
           </li>
           <li class="nav-item lej-padding">
-
-            <a class="nav-link" href="#sat" role="tab" data-toggle="tab">Saturday</a>
+            <a id="sun-link" class="nav-link" href="#sun" role="tab" data-toggle="tab">Sunday</a>
           </li>
-          <li class="nav-item lej-padding">
-
-            <a class="nav-link" href="#sun" role="tab" data-toggle="tab">Sunday</a>
-          </li>
-
         </ul>
 
         <div class="tab-content row justify-content-center">
@@ -577,7 +568,7 @@
           <!-- End Monday -->
 
           <!-- Tuesday -->
-          <div role="tabpanel" class="col-lg-9  tab-pane fade active show" id="tue">
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="tue">
             <div class="row schedule-item">
               <div class="col-md-3 py-1"><time>05:30 AM (IST)</time></div>
               <div class="col-md-7 py-1">
