--- a/index.html
+++ b/index.html
@@ -96,25 +96,25 @@
             </p>
             <ul #id="daySelection" class="nav nav-tabs nav-fill" role="tablist">
               <li class="nav-item lej-padding">
-                <a class="nav-link" href="#mon" role="tab" data-toggle="tab">Monday</a>
+                <a id="mon-link" class="nav-link" href="#mon" role="tab" data-toggle="tab">Monday</a>
               </li>
               <li class="nav-item lej-padding">
-                <a class="nav-link" href="#tue" role="tab" data-toggle="tab">Tuesday</a>
+                <a id="tue-link" class="nav-link" href="#tue" role="tab" data-toggle="tab">Tuesday</a>
               </li>
               <li class="nav-item lej-padding">
-                <a class="nav-link" href="#wed" role="tab" data-toggle="tab">Wednesday</a>
+                <a id="wed-link" class="nav-link" href="#wed" role="tab" data-toggle="tab">Wednesday</a>
               </li>
               <li class="nav-item lej-padding">
-                <a class="nav-link" href="#thu" role="tab" data-toggle="tab">Thursday</a>
+                <a id="thu-link" class="nav-link" href="#thu" role="tab" data-toggle="tab">Thursday</a>
               </li>
               <li class="nav-item lej-padding">
-                <a class="nav-link" href="#fri" role="tab" data-toggle="tab">Friday</a>
+                <a id="fri-link" class="nav-link" href="#fri" role="tab" data-toggle="tab">Friday</a>
               </li>
               <li class="nav-item lej-padding">
-                <a class="nav-link" href="#sat" role="tab" data-toggle="tab">Saturday</a>
+                <a id="sat-link" class="nav-link" href="#sat" role="tab" data-toggle="tab">Saturday</a>
               </li>
               <li class="nav-item lej-padding">
-                <a class="nav-link active show" href="#sun" role="tab" data-toggle="tab" aria-selected="true">Sunday</a>
+                <a id="sun-link" class="nav-link" href="#sun" role="tab" data-toggle="tab">Sunday</a>
               </li>
             </ul>
             <div class="tab-content row justify-content-center">
