Intro Image responsive fix

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
   ============================-->
   <section id="intro">
     <div class="intro-container wow fadeIn">
-      <div style="width: 30%; margin-left: auto; margin-right: auto;">
+      <div id="introImage">
         <img class="img-fluid" src="img/intro-bg.jpg">
       </div>
-      <h1 class="mb-4 pb-0"><span>Live online catholic Streams</span></h1>
+      <h1 class="my-2 my-sm-3 my-md-5 p-0"><span>Live online catholic Streams</span></h1>
     </div>
   </section>
 
