--- a/index.html
+++ b/index.html
@@ -1683,7 +1683,7 @@
             <h3 class="text-center text-capitalize font-weight-bold text-danger">English Holy Mass</h3>
             <p>All timings are in IST (GMT+5.30).
               <span class="instructions badge badge-info badge-pill my-1" onclick="openModal()"><i
-                  class="fa fa-book pr-1"></i>Instructions</span>
+                  class="fa fa-book pr-1"></i>Guidelines</span>
             </p>
             <ul #id="daySelection" class="nav nav-tabs nav-fill" role="tablist">
               <li class="nav-item lej-padding">
@@ -1976,7 +1976,7 @@
             <h3 class="text-center text-capitalize font-weight-bold text-danger">Hindi Holy Mass</h3>
             <p>All timings are in IST (GMT+5.30).
               <span class="instructions badge badge-info badge-pill my-1" onclick="openModal()"><i
-                  class="fa fa-book pr-1"></i>Instructions</span>
+                  class="fa fa-book pr-1"></i>Guidelines</span>
             </p>
             <ul #id="daySelection" class="nav nav-tabs nav-fill" role="tablist">
               <li class="nav-item lej-padding">
