palarivattom church added

--- a/index.html
+++ b/index.html
@@ -187,6 +187,17 @@
                   </div>
                 </div>
                 <div class="row schedule-item">
+                  <div class="col-md-3 py-1"><time>06:30 AM (IST)</time></div>
+                  <div class="col-md-7 py-1">
+                    <h4>St.John The Baptist Church, Palarivattom</h4>
+                    <p>Malayalam Holy Mass</p>
+                  </div>
+                  <div class="col-md-2 py-1">
+                    <a href="https://www.facebook.com/stjohnchurchpalarivattom/"><button
+                        class="btn btn-sm btn-warning"><i class="fa fa-television pr-1"></i>Watch</button> </a>
+                  </div>
+                </div>
+                <div class="row schedule-item">
                   <div class="col-md-3 py-1"><time>07:00 AM (IST)</time></div>
                   <div class="col-md-7 py-1">
                     <h4>Palai Diocese (Malayalam)</h4>
@@ -216,6 +227,17 @@
                   </div>
                   <div class="col-md-2 py-1">
                     <a href="https://www.youtube.com/channel/UCXQMk3mi-ydB-2iwQpriOpQ"><button
+                        class="btn btn-sm btn-warning"><i class="fa fa-television pr-1"></i>Watch</button> </a>
+                  </div>
+                </div>
+                <div class="row schedule-item">
+                  <div class="col-md-3 py-1"><time>06:30 AM (IST)</time></div>
+                  <div class="col-md-7 py-1">
+                    <h4>St.John The Baptist Church, Palarivattom</h4>
+                    <p>Malayalam Holy Mass</p>
+                  </div>
+                  <div class="col-md-2 py-1">
+                    <a href="https://www.facebook.com/stjohnchurchpalarivattom/"><button
                         class="btn btn-sm btn-warning"><i class="fa fa-television pr-1"></i>Watch</button> </a>
                   </div>
                 </div>
@@ -424,6 +446,17 @@
                 <div class="row schedule-item">
                   <div class="col-md-3 py-1"><time>06:30 AM (IST)</time></div>
                   <div class="col-md-7 py-1">
+                    <h4>St.John The Baptist Church, Palarivattom</h4>
+                    <p>Malayalam Holy Mass</p>
+                  </div>
+                  <div class="col-md-2 py-1">
+                    <a href="https://www.facebook.com/stjohnchurchpalarivattom/"><button
+                        class="btn btn-sm btn-warning"><i class="fa fa-television pr-1"></i>Watch</button> </a>
+                  </div>
+                </div>
+                <div class="row schedule-item">
+                  <div class="col-md-3 py-1"><time>06:30 AM (IST)</time></div>
+                  <div class="col-md-7 py-1">
                     <h4>Palai Diocese (Malayalam)</h4>
                     <p></p>
                   </div>
@@ -620,6 +653,17 @@
                   </div>
                   <div class="col-md-2 py-1">
                     <a href="https://www.youtube.com/channel/UCXQMk3mi-ydB-2iwQpriOpQ"><button
+                        class="btn btn-sm btn-warning"><i class="fa fa-television pr-1"></i>Watch</button> </a>
+                  </div>
+                </div>
+                <div class="row schedule-item">
+                  <div class="col-md-3 py-1"><time>06:30 AM (IST)</time></div>
+                  <div class="col-md-7 py-1">
+                    <h4>St.John The Baptist Church, Palarivattom</h4>
+                    <p>Malayalam Holy Mass</p>
+                  </div>
+                  <div class="col-md-2 py-1">
+                    <a href="https://www.facebook.com/stjohnchurchpalarivattom/"><button
                         class="btn btn-sm btn-warning"><i class="fa fa-television pr-1"></i>Watch</button> </a>
                   </div>
                 </div>
@@ -833,6 +877,17 @@
                   </div>
                   <div class="col-md-2 py-1">
                     <a href="https://www.youtube.com/channel/UCXQMk3mi-ydB-2iwQpriOpQ"><button
+                        class="btn btn-sm btn-warning"><i class="fa fa-television pr-1"></i>Watch</button> </a>
+                  </div>
+                </div>
+                <div class="row schedule-item">
+                  <div class="col-md-3 py-1"><time>06:30 AM (IST)</time></div>
+                  <div class="col-md-7 py-1">
+                    <h4>St.John The Baptist Church, Palarivattom</h4>
+                    <p>Malayalam Holy Mass</p>
+                  </div>
+                  <div class="col-md-2 py-1">
+                    <a href="https://www.facebook.com/stjohnchurchpalarivattom/"><button
                         class="btn btn-sm btn-warning"><i class="fa fa-television pr-1"></i>Watch</button> </a>
                   </div>
                 </div>
@@ -1075,6 +1130,17 @@
                 <div class="row schedule-item">
                   <div class="col-md-3 py-1"><time>06:30 AM (IST)</time></div>
                   <div class="col-md-7 py-1">
+                    <h4>St.John The Baptist Church, Palarivattom</h4>
+                    <p>Malayalam Holy Mass</p>
+                  </div>
+                  <div class="col-md-2 py-1">
+                    <a href="https://www.facebook.com/stjohnchurchpalarivattom/"><button
+                        class="btn btn-sm btn-warning"><i class="fa fa-television pr-1"></i>Watch</button> </a>
+                  </div>
+                </div>
+                <div class="row schedule-item">
+                  <div class="col-md-3 py-1"><time>06:30 AM (IST)</time></div>
+                  <div class="col-md-7 py-1">
                     <h4>Palai Diocese (Malayalam)</h4>
                     <p></p>
                   </div>
@@ -1293,6 +1359,17 @@
                   </div>
                   <div class="col-md-2 py-1">
                     <a href="https://www.youtube.com/channel/UCXQMk3mi-ydB-2iwQpriOpQ"><button
+                        class="btn btn-sm btn-warning"><i class="fa fa-television pr-1"></i>Watch</button> </a>
+                  </div>
+                </div>
+                <div class="row schedule-item">
+                  <div class="col-md-3 py-1"><time>06:30 AM (IST)</time></div>
+                  <div class="col-md-7 py-1">
+                    <h4>St.John The Baptist Church, Palarivattom</h4>
+                    <p>Malayalam Holy Mass</p>
+                  </div>
+                  <div class="col-md-2 py-1">
+                    <a href="https://www.facebook.com/stjohnchurchpalarivattom/"><button
                         class="btn btn-sm btn-warning"><i class="fa fa-television pr-1"></i>Watch</button> </a>
                   </div>
                 </div>
