--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <!-- <link href="lib/venobox/venobox.css" rel="stylesheet"> -->
-  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <!-- <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet"> -->
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
@@ -2328,7 +2328,7 @@
   <script src="lib/superfish/superfish.min.js"></script>
   <script src="lib/wow/wow.min.js"></script>
   <!-- <script src="lib/venobox/venobox.min.js"></script> -->
-  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+  <!-- <script src="lib/owlcarousel/owl.carousel.min.js"></script> -->
 
   <!-- Contact Form JavaScript File -->
   <script src="contactform/contactform.js"></script>
