Superfish Menu plugin - unused - removed

--- a/index.html
+++ b/index.html
@@ -2324,8 +2324,8 @@
   <script src="lib/jquery/jquery-migrate.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="lib/easing/easing.min.js"></script>
-  <script src="lib/superfish/hoverIntent.js"></script>
-  <script src="lib/superfish/superfish.min.js"></script>
+  <!-- <script src="lib/superfish/hoverIntent.js"></script>
+  <script src="lib/superfish/superfish.min.js"></script> -->
   <script src="lib/wow/wow.min.js"></script>
   <!-- <script src="lib/venobox/venobox.min.js"></script> -->
   <!-- <script src="lib/owlcarousel/owl.carousel.min.js"></script> -->
