jQuery Migrate - not necessary - removed

--- a/index.html
+++ b/index.html
@@ -2321,7 +2321,7 @@
 
   <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/jquery/jquery-migrate.min.js"></script>
+  <!-- <script src="lib/jquery/jquery-migrate.min.js"></script> -->
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="lib/easing/easing.min.js"></script>
   <!-- <script src="lib/superfish/hoverIntent.js"></script>
