meta tag updated - keywords, description, author

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <title>Catholic Stream Live</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="catholic streams live" name="keywords">
-  <meta content="live ctholic streams" name="description">
+  <meta name="author" content="Jesus Youth Infopark">
+  <meta content="Catholic,Holy Mass,Live,Online,Schedule,India,Kerala,Malayalam,English,Hindi"keywords">
+  <meta content="Live Online Holy Masses from all around the World" name="description">
 
   <!-- Favicons -->
   <link href="img/favicon.ico" rel="icon">
