Service integration - languages + days

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="section-header">
           <h3 class="text-center">Holy Masses from all around the world.</h3>
           <ul id="langSelection" class="nav nav-tabs nav-fill mb-5" role="tablist">
-            <li class="nav-item lej-padding">
+            <!-- <li class="nav-item lej-padding">
               <a class="nav-link active show" href="#malayalamMass" role="tab" data-toggle="tab"
                 aria-selected="true">Malayalam</a>
             </li>
@@ -83,7 +83,7 @@
             </li>
             <li class="nav-item lej-padding">
               <a class="nav-link" href="#hindiMass" role="tab" data-toggle="tab">Hindi</a>
-            </li>
+            </li> -->
           </ul>
         </div>
 
@@ -2335,6 +2335,7 @@
   <!-- <script src="contactform/contactform.js"></script> -->
 
   <!-- Template Main Javascript File -->
+  <script src="js/service.js"></script>
   <script src="js/main.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161546265-1"></script>
