--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="author" content="Jesus Youth Infopark">
   <meta content="Catholic,Holy Mass,Live,Online,Schedule,India,Kerala,Malayalam,English,Hindi"keywords">
   <meta content="Live Online Holy Masses from all around the World" name="description">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">                                                                                     
 
   <!-- Favicons -->
   <link href="img/favicon.ico" rel="icon">
