--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     ============================-->
     <section id="schedule" class="section-with-bg">
       <div class="container wow fadeInUp">
-        <div class="section-header">
+        <div class="section-header mb-4 mb-md-5">
           <h3 class="text-center">Holy Masses from all around the world.</h3>
-          <ul id="langSelection" class="nav nav-tabs nav-fill mb-5" role="tablist">
+          <ul id="langSelection" class="nav nav-tabs nav-fill" role="tablist">
           </ul>
         </div>
 
