--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     <!--==========================
       Schedule Section
     ============================-->
-    <section id="schedule" class="section-with-bg">
+    <section id="schedule" class="section-with-bg py-3 py-md-5">
       <div class="container wow fadeInUp">
         <div class="section-header mb-4 mb-md-5">
-          <h3 class="text-center">Holy Masses from all around the world.</h3>
+          <h4 class="text-center">Holy Masses from all around the world.</h4>
           <ul id="langSelection" class="nav nav-tabs nav-fill" role="tablist">
           </ul>
         </div>
