--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link href="css/style.css" rel="stylesheet">
   <script>
     if (location.protocol == 'https:') {
-    location.replace(`http:${location.href.substring(location.protocol.length)}?v=1`);
+    location.replace(`http:${location.href.substring(location.protocol.length)}?version=3.0`);
 }
   </script>
 </head>
