removed comments from HTML

--- a/index.html
+++ b/index.html
@@ -8,57 +8,33 @@
   <meta name="author" content="Jesus Youth Infopark">
   <meta content="Catholic,Holy Mass,Live,Online,Schedule,India,Kerala,Malayalam,English,Hindi"keywords">
   <meta content="Live Online Holy Masses from all around the World" name="description">                                                                                  
-
-  <!-- Favicons -->
   <link href="img/favicon.ico" rel="icon">
-
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800"
     rel="stylesheet">
-
-  <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="lib/animate/animate.min.css" rel="stylesheet">
-  <!-- <link href="lib/venobox/venobox.css" rel="stylesheet"> -->
-  <!-- <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet"> -->
-
-  <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
   <script>
     if (location.protocol == 'https:') {
-    location.replace(`http:${location.href.substring(location.protocol.length)}?version=3.0`);
-}
+      location.replace(`http:${location.href.substring(location.protocol.length)}?version=3.0`);
+    }
   </script>
 </head>
-
 <body>
-
-
-  <!--==========================
-    Header
-  ============================-->
   <header id="header">
     <div class="container">
-
       <div id="logo" class="pull-left">
         <h1><a href="index.html#intro">Catholic <span>S</span>tream</a></h1>
       </div>
-
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li><a href="index.html#intro">Home</a></li>
           <li><a href="http://jyinfopark.in/">Contact</a></li>
         </ul>
-      </nav><!-- #nav-menu-container -->
+      </nav>
     </div>
-  </header><!-- #header -->
-
-  <!--==========================
-    Intro Section
-  ============================-->
+  </header>
   <section id="intro">
     <div class="intro-container wow fadeIn">
       <div id="introImage">
@@ -69,10 +45,6 @@
   </section>
 
   <main id="main">
-
-    <!--==========================
-      Schedule Section
-    ============================-->
     <section id="schedule" class="section-with-bg py-3 py-md-5">
       <div class="container wow fadeInUp">
         <div class="section-header mb-4 mb-md-5">
@@ -80,21 +52,12 @@
           <ul id="langSelection" class="nav nav-tabs nav-fill" role="tablist">
           </ul>
         </div>
-
         <div id="holyMass" class="tab-content">
-
         </div>
-
       </div>
-
     </section>
-
   </main>
 
-
-  <!--==========================
-    Footer
-  ============================-->
   <footer id="footer">
     <div class="container">
       <div class="copyright">
@@ -102,9 +65,8 @@
           Jesus Youth Infopark</a>
       </div>
     </div>
-  </footer><!-- #footer -->
+  </footer>
 
-  <!-- modal for online mass  -->
   <div class="modal fade" id="guidelinesModal" tabindex="-1" role="dialog" aria-labelledby="guidelinesModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -149,7 +111,7 @@
       </div>
     </div>
   </div>
-  <!-- modal ends -->
+
   <div class="modal fade" id="maintenanceModal" tabindex="-1" role="dialog" aria-labelledby="maintenanceModalLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
@@ -179,21 +141,10 @@
 
   <a href="index.html#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
 
-  <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
-  <!-- <script src="lib/jquery/jquery-migrate.min.js"></script> -->
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="lib/easing/easing.min.js"></script>
-  <!-- <script src="lib/superfish/hoverIntent.js"></script>
-  <script src="lib/superfish/superfish.min.js"></script> -->
   <script src="lib/wow/wow.min.js"></script>
-  <!-- <script src="lib/venobox/venobox.min.js"></script> -->
-  <!-- <script src="lib/owlcarousel/owl.carousel.min.js"></script> -->
-
-  <!-- Contact Form JavaScript File -->
-  <!-- <script src="contactform/contactform.js"></script> -->
-
-  <!-- Template Main Javascript File -->
   <script src="js/service.js"></script>
   <script src="js/main.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -207,5 +158,4 @@
     gtag('config', 'UA-161546265-1');
   </script>
 </body>
-
 </html>
