--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Catholic Stream Live</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta name="author" content="Jesus Youth Infopark">
-  <meta content="Catholic,Holy Mass,Live,Online,Schedule,India,Kerala,Malayalam,English,Hindi"keywords">
-  <meta content="Live Online Holy Masses from all around the World" name="description">                                                                                  
+  <meta content="Catholic,Holy Mass,Live,Online,Schedule,India,Kerala,Malayalam,English,Hindi" keywords">
+  <meta content="Live Online Holy Masses from all around the World" name="description">
   <link href="img/favicon.ico" rel="icon">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800"
     rel="stylesheet">
@@ -21,6 +21,7 @@
     }
   </script>
 </head>
+
 <body>
   <header id="header">
     <div class="container">
@@ -127,11 +128,13 @@
         <div class="modal-body">
           <article>
             <div>
-                <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="http://jyinfopark.in">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
-                <p>
-                  <i class="fa fa-heart" style="color: red;"></i>
-                  Jesus Youth Infopark
-                </p>
+              <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to
+                you can always <a href="http://jyinfopark.in">contact us</a>, otherwise we&rsquo;ll be back online
+                shortly!</p>
+              <p>
+                <i class="fa fa-heart" style="color: red;"></i>
+                Jesus Youth Infopark
+              </p>
             </div>
           </article>
         </div>
@@ -151,6 +154,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161546265-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
+
     function gtag() {
       dataLayer.push(arguments);
     }
@@ -158,4 +162,5 @@
     gtag('config', 'UA-161546265-1');
   </script>
 </body>
+
 </html>
