Day selection scroll top + min-height logic for a contant view

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
   </section>
 
   <main id="main">
-    <section id="schedule" class="section-with-bg py-3 py-md-5">
+    <section id="schedule" class="section-with-bg pt-3 pt-md-5">
       <div class="container wow fadeInUp">
-        <div class="section-header mb-4 mb-md-5">
+        <div class="section-header">
           <h4 class="text-center">Holy Masses from all around the world.</h4>
           <ul id="langSelection" class="nav nav-tabs nav-fill" role="tablist">
           </ul>
         </div>
-        <div id="holyMass" class="tab-content">
+        <div id="holyMass" class="tab-content  pt-4 pt-md-5 pb-3 pb-md-5">
         </div>
       </div>
     </section>
