--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       <div class="container wow fadeInUp">
         <div class="section-header mb-4 mb-md-5">
           <h4 class="text-center">Holy Masses from all around the world.</h4>
+          <h5 class="text-center">Select language.</h5>
           <ul id="langSelection" class="nav nav-tabs nav-fill" role="tablist">
           </ul>
         </div>
