--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h4 class="text-center">Holy Masses from all around the world.</h4>
-          <h5 class="text-center">Select language.</h5>
+
+          <div class="d-flex justify-content-center loadingContent">
+            <div class="spinner-grow text-warning" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
+          
           <ul id="langSelection" class="nav nav-tabs nav-fill" role="tablist">
           </ul>
         </div>
