holymass height + footer fix

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             </div>
           </div>
           
-          <ul id="langSelection" class="nav nav-tabs nav-fill" role="tablist">
+          <ul id="langSelection" class="nav nav-tabs nav-fill pb-1" role="tablist">
           </ul>
         </div>
-        <div id="holyMass" class="tab-content  pt-4 pt-md-5 pb-3 pb-md-5">
+        <div id="holyMass" class="tab-content  pt-3 pt-md-4 pb-3 pb-md-5">
         </div>
       </div>
     </section>
