TimeZone dropdown moved up to avoid redundency

--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
     <section id="schedule" class="section-with-bg pt-3 pt-md-5">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h4 class="text-center">Holy Masses from all around the world.</h4>
+          <h3 class="text-center">Holy Masses from all around the world.</h3>
+
+          <p class="mb-2 mb-sm-3 mb-md-4">
+            All timings are in Indian Standard Time (GMT+5.30).
+            Additionally you can see time in your local timezone.
+            <span id="timeZones" class="d-inline-block"></span>
+            <span class="instructions badge badge-info badge-pill my-1">
+              <i class="fa fa-book pr-1"></i>Guidelines
+            </span>
+          </p>
 
           <div class="d-flex justify-content-center loadingContent">
             <div class="spinner-grow text-warning" role="status">
