--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800"
     rel="stylesheet">
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <!-- <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/v4-shims.min.css" integrity="sha256-wN7QJaqAwQ03kgUhyN4EU2phRdDkLrQYbFe0EvpQ60U=" crossorigin="anonymous" />
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.12/css/bootstrap-select.min.css" integrity="sha256-l3FykDBm9+58ZcJJtzcFvWjBZNJO40HmvebhpHXEhC0=" crossorigin="anonymous" />
   <link href="css/style.css" rel="stylesheet">
@@ -50,14 +52,17 @@
     <section id="schedule" class="section-with-bg pt-3 pt-md-5">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h3 class="text-center">Holy Masses from all around the world.</h3>
+          <h2 class="text-center">Live Holy Masses from all around the world.</h2>
 
           <p class="mb-2 mb-sm-3 mb-md-4">
-            All timings are in Indian Standard Time (GMT+5.30).
-            Additionally you can see time in your local timezone.
-            <span id="timeZones" class="d-inline-block"></span>
-            <span class="instructions badge badge-info badge-pill my-1">
-              <i class="fa fa-book pr-1"></i>Guidelines
+            All timings are in Indian Standard Time (IST GMT+5.30 Asia/Kolkata).
+            Additionally you can see timing in your local timezone.
+            <br/>
+            <span id="timeZones" class="btn btn-outline-warning p-0 m-2">
+              <i class="far fa-clock pl-2"></i>
+            </span>
+            <span id="instructions" class="btn btn-outline-info m-2">
+              <i class="fa fa-book pr-3"></i>Guidelines
             </span>
           </p>
 
