fa icons - updates

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <span class="d-flex-item">Holy Masses in multiple languages</span>
             </div>
             <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-muted text-left d-flex align-items-center">
-              <i class="fa-2x d-block p-3 text-center d-flex-item fas fa-book"></i>
+              <i class="fa-2x d-block p-3 text-center d-flex-item fas fa-bible"></i>
               <span class="d-flex-item">Guidelines for attending Holy Mass online</span>
             </div>
             <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-muted text-left d-flex align-items-center">
@@ -83,11 +83,11 @@
             <!-- All timings are in Indian Standard Time (IST GMT+5.30 Asia/Kolkata).
             Additionally you can see timing in your local timezone.
             <br/> -->
-            <span id="timeZones" class="btn btn-outline-warning p-0 m-2">
-              <i class="far fa-clock pl-2"></i>
+            <span id="timeZones" class="btn btn-outline-info p-0 m-2">
+              <i class="fas fa-user-clock pl-2"></i>
             </span>
             <span id="instructions" class="btn btn-outline-info m-2">
-              <i class="fa fa-book pr-3"></i>Guidelines
+              <i class="fas fa-bible pr-3"></i>Guidelines
             </span>
           </p>
 
@@ -98,6 +98,9 @@
           </div>
           
           <ul id="langSelection" class="nav nav-tabs nav-fill pb-1" role="tablist">
+            <li class="nav-item lej-padding icon">
+              <a class="nav-link" data-toggle="tooltip" data-placement="top" title="select Holy Mass language"><i class="fas fa-language"></i></a>
+           </li>
           </ul>
         </div>
         <div id="holyMass" class="tab-content  pt-3 pt-md-4 pb-3 pb-md-5">
