Bootstrap v4 float fix for Nav Menu

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
   <header id="header">
     <div class="container">
-      <div id="logo" class="pull-left">
+      <div id="logo" class="float-left">
         <h1><a href="index.html#intro">Catholic <span>S</span>tream</a></h1>
       </div>
       <nav id="nav-menu-container">
