Features Section moved up

--- a/index.html
+++ b/index.html
@@ -48,36 +48,42 @@
     </div>
   </section>
 
+  <section id="features" class="p-2 p-md-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-left d-flex align-items-center">
+          <i class="fa-2x d-block p-3 text-center d-flex-item fas fa-globe-americas"></i>
+          <span class="d-flex-item">Live Holy Masses from all around the World</span>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-left d-flex align-items-center">
+          <i class="fa-2x d-block p-3 text-center d-flex-item far fa-calendar-alt"></i>
+          <span class="d-flex-item">Holy Mass timings for Weekdays and Special days</span>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-left d-flex align-items-center">
+          <i class="fa-2x d-block p-3 text-center d-flex-item fas fa-language"></i>
+          <span class="d-flex-item">Holy Masses in multiple languages</span>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-left d-flex align-items-center">
+          <i class="fa-2x d-block p-3 text-center d-flex-item fas fa-bible"></i>
+          <span class="d-flex-item">Guidelines for attending Holy Mass online</span>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-left d-flex align-items-center">
+          <i class="fa-2x d-block p-3 text-center d-flex-item fas fa-clock"></i>
+          <span class="d-flex-item">All timings are in Indian Standard Time (IST GMT+05.30 Asia/Kolkata)</span>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-left d-flex align-items-center">
+          <i class="fa-2x d-block p-3 text-center d-flex-item fas fa-user-clock"></i>
+          <span class="d-flex-item">View timing in any timezone around the World</span>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
   <main id="main">
     <section id="schedule" class="section-with-bg pt-3 pt-md-4">
       <div class="container wow fadeInUp">
-        <div class="section-header">
-          <div id="features" class="row mb-3 mb-md-5">
-            <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-muted text-left d-flex align-items-center">
-              <i class="fa-2x d-block p-3 text-center d-flex-item fas fa-globe-americas"></i>
-              <span class="d-flex-item">Live Holy Masses from all around the World</span>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-muted text-left d-flex align-items-center">
-              <i class="fa-2x d-block p-3 text-center d-flex-item far fa-calendar-alt"></i>
-              <span class="d-flex-item">Holy Mass timings for Weekdays and Special days</span>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-muted text-left d-flex align-items-center">
-              <i class="fa-2x d-block p-3 text-center d-flex-item fas fa-language"></i>
-              <span class="d-flex-item">Holy Masses in multiple languages</span>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-muted text-left d-flex align-items-center">
-              <i class="fa-2x d-block p-3 text-center d-flex-item fas fa-bible"></i>
-              <span class="d-flex-item">Guidelines for attending Holy Mass online</span>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-muted text-left d-flex align-items-center">
-              <i class="fa-2x d-block p-3 text-center d-flex-item fas fa-clock"></i>
-              <span class="d-flex-item">All timings are in Indian Standard Time (IST GMT+05.30 Asia/Kolkata)</span>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 my-2 my-md-3 text-muted text-left d-flex align-items-center">
-              <i class="fa-2x d-block p-3 text-center d-flex-item fas fa-user-clock"></i>
-              <span class="d-flex-item">View timing in any timezone around the World</span>
-            </div>
-          </div>
+        <div class="section-header">       
           <!-- <h2 class="text-center">Live Holy Masses from all around the world.</h2> -->
           <p class="mb-2 mb-sm-3 mb-md-4">
             <!-- All timings are in Indian Standard Time (IST GMT+5.30 Asia/Kolkata).
