--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
   <a href="index.html#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
 
-  <script src="lib/jquery/jquery.min.js"></script>
+  <!-- <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="lib/easing/easing.min.js"></script>
   <script src="lib/wow/wow.min.js"></script>
@@ -207,8 +207,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.28/moment-timezone-with-data-1970-2030.min.js" integrity="sha256-ob9GYTF6HJFUyVtlWivU47nga6eeRR3Lti9VfUeFhBI=" crossorigin="anonymous"></script>
   <script src="js/timezone.js"></script>
-  <script src="js/service.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/service.js"></script> -->
+  <script src="dist/js/app.min.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161546265-1"></script>
   <script>
