Fixed img paths

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Jesus Youth Infopark">
   <meta content="Catholic,Holy Mass,Live,Online,Schedule,India,Kerala,Malayalam,English,Hindi" keywords">
   <meta content="Live Online Holy Masses from all around the World" name="description">
-  <link href="img/favicon.ico" rel="icon">
+  <link href="favicon.ico" rel="icon">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800"
     rel="stylesheet">
   <!-- <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
   <section id="intro">
     <div class="intro-container wow fadeIn">
       <div id="introImage">
-        <img class="img-fluid" src="img/intro-bg.jpg">
+        <img class="img-fluid" src="dist/img/intro-bg.jpg">
       </div>
       <h1 class="my-2 my-sm-3 my-md-5 p-0"><span>Live online catholic Streams</span></h1>
     </div>
@@ -154,11 +154,11 @@
               prayer.
               <div class="pt-2">
                 Download prayer here :
-                <a href="img/english.jpeg" class="badge badge-pill badge-warning" target="_blank"
-                  download="/img/english.jpeg">English</a>
+                <a href="dist/img/english.jpeg" class="badge badge-pill badge-warning" target="_blank"
+                  download="/dist/img/english.jpeg">English</a>
                 &nbsp;
-                <a href="img/malayalam.jpeg" class="badge badge-pill badge-warning" target="_blank"
-                  download="/img/malayalam.jpeg">Malayalam</a>
+                <a href="dist/img/malayalam.jpeg" class="badge badge-pill badge-warning" target="_blank"
+                  download="/dist/img/malayalam.jpeg">Malayalam</a>
               </div>
             </li>
           </ol>
